# zero2prod

./: .tmux.session  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
configuration/: base.yaml
migrations/: 20240522192405_create_subscriptions_table.sql  20250922051401_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
