[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Timon Vioal"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

# sudo apt-get install lld clang
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

